export transform_xdt_to_xss

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(is_dominated)
 export(mlr_terminators)
 export(term)
 export(terms)
+export(transform_xdt_to_xss)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
